Add service-metrics binary to job
Signed-off-by: Stev Witzel <switzel@pivotal.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/loggregator"]
 	path = src/loggregator
 	url = git@github.com:cloudfoundry/loggregator.git
+[submodule "src/service-metrics"]
+	path = src/service-metrics
+	url = git@github.com:pivotal-cf-experimental/service-metrics.git
