--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -84,6 +84,8 @@ jobs:
         NAME: service-metrics
         FORCE: false
         FINAL: true
+        S3_ACCESS_KEY: {{release-bucket-access-key}}
+        S3_PRIVATE_KEY: {{release-bucket-secret-key}}
   - put: final-release
     params: 
       from: create-release/service-metrics-release-develop/releases/service-metrics/service-metrics-(.*).tgz
