--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -85,11 +85,11 @@ jobs:
         FORCE: false
         FINAL: true
         S3_ACCESS_KEY: {{release-bucket-access-key}}
-        S3_PRIVATE_KEY: {{release-bucket-secret-key}}
+        S3_SECRET_KEY: {{release-bucket-secret-key}}
   - put: final-release
     params: 
       from: create-release/service-metrics-release-develop/releases/service-metrics/service-metrics-(.*).tgz
-      to: service-metrics
+      to: service-metrics/
 
 - name: promote-to-master
   plan:
