--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -6,6 +6,8 @@ resources:
     branch: develop
     private_key: {{git-private-key}}
     uri: git@github.com:pivotal-cf-experimental/service-metrics-release
+    ignore_paths:
+    - releases/
 
 - name: service-metrics-release-master
   type: git
