Pipeline with major and minor bumps fixed right.
Signed-off-by: Stev Witzel <switzel@pivotal.io>

--- a/ci/create-release.yml
+++ b/ci/create-release.yml
@@ -4,11 +4,11 @@ platform: linux
 image: docker:///cflondonservices/london-services-ci-base#stable
 
 inputs:
-  - name: service-metrics-release-develop
+  - name: develop
   - name: version
 
 run:
-  path: service-metrics-release-develop/ci/scripts/create-release
+  path: develop/ci/scripts/create-release
 
 params:
   NAME:
