--- a/ci/release-test.yml
+++ b/ci/release-test.yml
@@ -4,10 +4,10 @@ platform: linux
 image: docker:///cflondonservices/london-services-ci-base#stable
 
 inputs:
-  - name: service-metrics-release-develop
+  - name: develop
 
 run:
-  path: service-metrics-release-develop/ci/scripts/release-test
+  path: develop/ci/scripts/release-test
 
 params:
   CF_API:
