change interval naming to ensure it is explictly clear
Signed-off-by: Jamie Monserrate <jmonserrate@pivotal.io>

--- a/manifests/service-metrics-aws.yml
+++ b/manifests/service-metrics-aws.yml
@@ -9,7 +9,7 @@ releases:
 
 properties:
   service_metrics:
-    interval: 5
+    execution_interval_seconds: 5
     metrics_command: /bin/echo
     metrics_command_args:
     - -n
