--- a/manifests/service-metrics-lite.yml
+++ b/manifests/service-metrics-lite.yml
@@ -9,7 +9,7 @@ releases:
 
 properties:
   service_metrics:
-    interval: 5
+    execution_interval_seconds: 5
     metrics_command: /bin/echo
     metrics_command_args:
     - -n
