Tests for service_metrics
[#99307332]

--- a/manifests/service-metrics-aws.yml
+++ b/manifests/service-metrics-aws.yml
@@ -19,7 +19,7 @@ properties:
     machines:
     - 10.0.16.104
   metron_agent:
-    deployment: bosh-aws
+    deployment: service-metrics
     zone: z1
   loggregator_endpoint:
     shared_secret: raicVesOldIdWyntedquadwyWokFafBi
