Using cloudfoundry metron instead of shipping our own
[#99307332]

--- a/manifests/service-metrics-aws.yml
+++ b/manifests/service-metrics-aws.yml
@@ -6,6 +6,8 @@ director_uuid: e92258ed-c38a-4ea1-b7d4-fbef77d8e5d0
 releases:
 - name: service-metrics
   version: latest
+- name: cf
+  version: latest
 
 properties:
   service_metrics:
@@ -21,6 +23,7 @@ properties:
   metron_agent:
     deployment: service-metrics
     zone: z1
+    dropsonde_incoming_port: 3457
   loggregator_endpoint:
     shared_secret: raicVesOldIdWyntedquadwyWokFafBi
   syslog_aggregator:
@@ -41,6 +44,7 @@ jobs:
   - name: service-metrics
   templates:
   - {release: service-metrics, name: service-metrics}
+  - {name: metron_agent, release: cf}
 
 networks:
 - name: service-metrics
