Add monit_dependencies for service-metrics job
[#102057262]

--- a/manifests/service-metrics-aws.yml
+++ b/manifests/service-metrics-aws.yml
@@ -17,6 +17,7 @@ properties:
     metrics_command_args:
     - -n
     - '[{"key":"service-dummy","value":99,"unit":"metric"}]'
+    monit_dependencies: []
   etcd:
     machines:
     - 10.0.16.104
