--- a/manifests/service-metrics-lite.yml
+++ b/manifests/service-metrics-lite.yml
@@ -17,6 +17,7 @@ properties:
     metrics_command_args:
     - -n
     - '[{"key":"service-dummy","value":99,"unit":"metric"}]'
+    monit_dependencies: []
   etcd:
     machines:
     - 10.244.0.42
