--- a/ci/upload-release.yml
+++ b/ci/upload-release.yml
@@ -4,7 +4,7 @@ platform: linux
 image: docker:///cflondonservices/on-demand-service-broker-ci
 
 inputs:
-- name: service-backup-release
+- name: service-metrics-release
   path: release-to-upload
 - name: services-enablement-meta
 
