Correct blobs paths for golang 1.6.2 upgrade
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>
Signed-off-by: Pavan Pinnaka <ppinnaka@pivotal.io>
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>
Signed-off-by: Pavan Pinnaka <ppinnaka@pivotal.io>
Signed-off-by: Maria Ntalla <mntalla@pivotal.io>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,5 +1,5 @@
 ---
-go1.6.2.linux-amd64.tar.gz:
-  object_id: 814c7177-bb22-42c5-870d-5d9bd2885aca
+go/go1.6.2.linux-amd64.tar.gz:
+  object_id: 45ec73f9-fa1b-4fc2-bcf4-11000f760064
   sha: b8318b09de06076d5397e6ec18ebef3b45cd315d
   size: 84840658
