update upload release config in pipeline
Signed-off-by: Craig Furman <cfurman@pivotal.io>

--- a/ci/upload-release.yml
+++ b/ci/upload-release.yml
@@ -16,6 +16,7 @@ run:
 params:
   BOSH_URL:
   BOSH_CA_CERT:
-  BOSH_CLIENT:
-  BOSH_CLIENT_SECRET:
+  BOSH_USERNAME:
+  BOSH_PASSWORD:
+  AUTH_TYPE:
   RELEASE_NAME:
