--- a/ci/create-final-release.yml
+++ b/ci/create-final-release.yml
@@ -6,7 +6,7 @@ image_resource:
   source: {repository: pcfservicesenablement/services-enablement-ci}
 
 inputs:
-- name: final-tag
+- name: metrics-final-release-tag
   path: release-to-create
 - name: services-enablement-meta
 
