Reinit service-metrics submodule into GOPATH
[#132144347]

Signed-off-by: Alex Blease <ablease@pivotal.io>

Add release GOPATH to envrc

Signed-off-by: Sam Gunaratne <rgunaratne@pivotal.io>

--- a/.envrc.template
+++ b/.envrc.template
@@ -1,5 +1,7 @@
-export CF_API=
-export CF_USERNAME=
-export CF_PASSWORD=
-export DOPPLER_ADDR=
-export DEPLOYMENT_NAME=
+export GOPATH =
+export PATH =
+export CF_API =
+export CF_USERNAME =
+export CF_PASSWORD =
+export DOPPLER_ADDR =
+export DEPLOYMENT_NAME =
