Use latest ci scripts to create final release
[#132230215]

Signed-off-by: Sam Gunaratne <rgunaratne@pivotal.io>

--- a/ci/push-metrics-tag.yml
+++ b/ci/push-metrics-tag.yml
@@ -7,11 +7,12 @@ image_resource:
 
 inputs:
 - name: metrics-final-tag
+- name: metrics-ci-scripts
 
 outputs:
 - name: metrics-with-tag
 
 run:
-  path: metrics-final-tag/ci/scripts/push-metrics-tag.sh
+  path: metrics-ci-scripts/ci/scripts/push-metrics-tag.sh
 
 params: {}
