Don't fail when submodule tag already exists
Signed-off-by: Alex Blease <ablease@pivotal.io>

--- a/ci/push-docs-tag.yml
+++ b/ci/push-docs-tag.yml
@@ -12,6 +12,8 @@ outputs:
 - name: docs-with-tag
 
 run:
-  path: metrics-final-tag/ci/scripts/push-docs-tag.sh
+  path: metrics-final-tag/ci/scripts/push-submodule-tag.sh
 
-params: {}
+params:
+  SUBMODULE_PATH: docs
+  TAG_PATH: docs-with-tag
