--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,11 +1,9 @@
-# Copyright (C) 2015-Present Pivotal Software, Inc. All rights reserved.
-# This program and the accompanying materials are made available under the terms of the under the Apache License, Version 2.0 (the "License”); you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# http://www.apache.org/licenses/LICENSE-2.0
-# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
-
 ---
 go/go1.7.4.linux-amd64.tar.gz:
   object_id: c0b4a821-acac-4382-b5f2-fbef0d703ec4
   sha: 2e5baf03d1590e048c84d1d5b4b6f2540efaaea1
   size: 84021919
+go/go1.7.5.linux-amd64.tar.gz:
+  object_id: 95205c07-ead7-4671-9933-16a1781a6a7f
+  sha: 7c6902ce8cd3b9963082d748c50df074e4896796
+  size: 84176916
