Recreate .final_builds metadata for service-metrics 1.5.9 and update references
[#151476064]

Signed-off-by: Kieron Browne <kbrowne@pivotal.io>

--- a/releases/service-metrics/index.yml
+++ b/releases/service-metrics/index.yml
@@ -1,4 +1,6 @@
 builds:
+  13695e55-1f29-4d28-4f85-09622d82e1e0:
+    version: 1.5.9
   20209a79-4fa2-4476-70ff-b010d6d1c3f1:
     version: 1.5.9-alpha1
   876a5816-2ea2-409e-9114-5a3589aba0eb:
