Use ruby 2.3.0 to bundle release
[#152144963]

Signed-off-by: Simon Jones <sijones@pivotal.io>

--- a/.envrc.template
+++ b/.envrc.template
@@ -8,4 +8,9 @@ MY_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 export GOPATH=$MY_DIR
 export PATH=$GOPATH/bin:$PATH
 
-source system_tests.sh
+export CF_API=
+export CF_USERNAME=
+export CF_PASSWORD=
+export DOPPLER_ADDR=
+export DEPLOYMENT_NAME=
+export CF_SSL_VALIDATION=
